修改标题样式

--- a/HTML/课表.html
+++ b/HTML/课表.html
@@ -36,11 +36,16 @@
         .none {
             background-color: RGB(233, 238, 244);
         }
+        table caption{
+            font-size: 30px;
+          
+            font-weight: bold;
+        }
     </style>
 </head>
 <body>
 <table border="1" align="center" cellspacing="0" bordercolor=black>
-    <caption>18070541课表</caption>
+    <caption >18070541课表</caption>
     <tr align="center">
         <td></td>
         <td>周一</td>
